fix(search): align footer elements and add proper spacing (#8571)
* fix(search): align footer elements and add proper spacing

* fix(search): using tailwind for fix margin

* fix(search): resolve misalignment in mobile design

* fix(search): syntax issue


* fix(search): remove extra ( ; )


* chore: formatting

---------

--- a/apps/site/components/Common/Searchbox/Footer/index.module.css
+++ b/apps/site/components/Common/Searchbox/Footer/index.module.css
@@ -51,3 +51,11 @@
     @apply size-4;
   }
 }
+
+.poweredByWrapper {
+  @apply ml-0
+    flex
+    items-center
+    justify-end
+    lg:ml-8;
+}
